--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -362,15 +362,22 @@
     text-transform: uppercase;
     line-height: 1.3;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 52px;
     margin-bottom: 35px;
     position: relative;
     display: inline-block;
 
+    position: relative;
+    padding: 0 65px;
+
     @media (max-width:($screen-xxl - 1)) {
       font-size: 45px;
       text-align: center;
-      display: block;
+      // display: block;
+    }
+    @media (min-width:1535px) {
+      font-size: 60px;
+      padding: 0;
     }
 
     &:before,
@@ -393,7 +400,10 @@
 
       background-image: url(../img/quote-left-orange.svg);
       top: 0;
-      left: -60px;
+      left: 0;
+      @media (min-width:1535px) {
+        left: -60px;
+      }
       @media (max-width:($screen-lg - 1)) {
         left: 0;
         top: -15px;
@@ -403,7 +413,10 @@
 
       background-image: url(../img/quote-right-orange.svg);
       bottom: 0;
-      right: -60px;
+      right: 0;
+      @media (min-width:1535px) {
+        right: -60px;
+      }
       @media (max-width:($screen-lg - 1)) {
         right: 0;
         bottom: -15px;
@@ -610,6 +623,12 @@
       background-repeat: no-repeat;
       background-position: left  center;
       background-size: contain;
+      @media (min-width:$screen-lg ) {
+        right: 0;
+      }
+      @media (min-width: $screen-xl) {
+        right: 38%;
+      }
       @media (min-width: $screen-xxl) {
         right: 63%;
       }
@@ -618,6 +637,18 @@
       }
     }
 
+    @media (min-width:$screen-lg ) {
+      padding: 60px 0;
+      width: 420px;
+    }
+    @media (min-width:$screen-xl ) {
+      padding: 160px 0;
+      width: 540px;
+    }
+    @media (min-width:$screen-xxl ) {
+      padding: 160px 0;
+      width: 672px;
+    }
     @media (max-width:($screen-lg - 1)) {
       padding: 50px 0;
     }
@@ -635,6 +666,8 @@
     font-weight: 700;
     font-size: 48px;
     margin-bottom: 35px;
+    position: relative;
+    display: inline-block;
     position: relative;
 
     @media (max-width:($screen-xxl - 1)) {
@@ -677,7 +710,7 @@
     &:after {
       background-image: url(../img/quote-right-white.svg);
       bottom: 0;
-      right: -60px;
+      right: 0;
       @media (max-width:($screen-lg - 1)) {
         bottom: -15px;
         right: 0;
@@ -708,40 +741,32 @@
 
 .offer {
   overflow: hidden;
+  padding: 214px 0;
 
   @media (max-width:($screen-lg - 1)) {
     text-align: center;
+    padding: 50px 0;
   }
 
   &__inner {
-    display: flex;
+    @include row;
   }
 
   &__main {
-    position: relative;
-    padding: 214px 0;
+    @include col();
+    @include col(xxl, 5);
+    @include col(xl, 6);
+    @include col(lg, 7);
+  }
 
-    &:after {
-      content: "";
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 100%;
-      width: 1200px;
-      background-image: url(../img/offer-img.png);
-      background-repeat: no-repeat;
-      background-position: left center;
-      @media (max-width:($screen-lg - 1)) {
-        display: none;
-      }
-    }
+  &__img-wrap {
+    @include col();
+    @include col(xxl, 7);
+    @include col(xl, 6);
+    @include col(lg, 5);
 
     @media (max-width:($screen-lg - 1)) {
-      padding: 50px 0;
-    }
-
-    @media (min-width: $screen-lg) {
-      width: 605px;
+      display: none;
     }
   }
 }
@@ -839,7 +864,7 @@
     @media (max-width:($screen-lg - 1)) {
       font-size: 18px;
       width: 100%;
-      padding: 25px 35px;
+      padding: 25px 15px;
     }
   }
 
@@ -885,6 +910,10 @@
     .fpage__inner {
       &:before {
         background-image: url(../img/form-img-01.png);
+        @media (max-width:($screen-xxl - 1)) {
+          background-size: 45%;
+          background-position: left center;
+        }
       }
     }
   }
@@ -892,6 +921,10 @@
     .fpage__inner {
       &:before {
         background-image: url(../img/form-img-02.png);
+        @media (max-width:($screen-xxl - 1)) {
+          background-size: 45%;
+          background-position: left center;
+        }
       }
     }
   }
